Default button in File Browser does not always listen to the Return / Enter key (regression) #82002
Closed
opened 2020-10-23 13:25:26 +02:00 by Anton Raves
·
31 comments
No Branch/Tag Specified
temp-sculpt-dyntopo-hive-alloc
temp-sculpt-dyntopo
main
blender-v3.6-release
node-group-operators
brush-assets-project
asset-shelf
tmp-usd-python-mtl
blender-v2.93-release
blender-v3.3-release
universal-scene-description
asset-browser-frontend-split
temp-sculpt-attr-api
blender-v3.5-release
realtime-clock
sculpt-dev
gpencil-next
bevelv2
microfacet_hair
blender-projects-basics
principled-v2
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Apply labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
Milestone
Set milestone
Clear milestone
No items
No Milestone
Projects
Set Project
Clear projects
No project
Assignees
Assign users
Clear assignees
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#82002
Reference in New Issue
There is no content yet.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may exist for a short time before cleaning up, in most cases it CANNOT be undone. Continue?
System Information
Operating system: Darwin-19.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel HD Graphics 4000 OpenGL Engine Intel Inc. 4.1 INTEL-14.7.8
Blender Version
Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-10-21 22:57, hash:
b0f34eee30
Worked: 2.90
Short description of error
Default button in File Browser does not always listen to the Return / Enter key
I have demonstrated this bug / problem to @JulianEisel in person, so he already knows about this bug, he just wanted me to write a few lines into the bug reporting system as a reminder.
There is no fixed case as to when this happens exactly, but about 50 percent of the time when a File Browser is there for opening / saving files and a filename is entered into the appropriate field, Blender will not listen to the Return / Enter key to continue and do what you had in mind.
Only when one clicks on the default button itself, will Blender carry out the request to "Save" / "Open" or similar command needed at that moment.
The problem occurs both on macOS 10.15.6 as well as Fedora 32 Linux distro.
Exact steps for others to reproduce the error
Nothing happens. If you keep pressing enter though, sometimes it eventually load the file.
Sometimes this happens when you press Ctrl+O, sometimes not.
This is also true for saving (where this is even more disturbing)
from #88041 (ENTER does not Save file when mouse cursor is over Save dialog text field (regression)):
When you type a new filename into the SAVE FILE dialog and the mouse cursor is still where you just placed it, i.e. IN the text field, hitting ENTER does not Save and dismiss the dialog. The user is pointlessly required to move their cursor into the file list.
Added subscribers: @JulianEisel, @Memento
#91196 was marked as duplicate of this issue
#88041 was marked as duplicate of this issue
#87542 was marked as duplicate of this issue
#84545 was marked as duplicate of this issue
Added subscriber: @iss
I can confirm this issue, usually the problem is that mouse pointer will drift away to another field or button that will respond to pressed enter.
Or with Following steps:
Nothing happens. If you keep pressing enter though, sometimes it eventually load the file.
Sometimes this happens when you press Ctrl+O, sometimes not.
As a person that opens quite significant amount of files daily, I was quite annoyed, that I can't do Ctrl+O, Ctrl+V, Enter to open file, but I can understand that my workflow may be
a bit extraordinary. Also I can make file browser to open in same window and that works quite well. I still need to make sure I don't move my mouse though.
Changed status from 'Needs Triage' to: 'Confirmed'
Added subscribers: @kanani, @rjg
Definitely seems like a weird one, but also a harmless one. Except of some user confusion, nothing happens (literally). Classifying as low priority.
Added subscriber: @Poly_Ferret
Its consistent when you place your mouse cursor just above where you'd type in the file name (in the grey area between the file name and browser window).
When there is a default button, that entire dialog / window should respond to pressing the "Enter" or "Return" key, not just when the mouse is in / hovering over a smaller area of that dialog / window.
There should be no obvious default button when the application only listens to a (mouse inside) smaller area or when that dialog / window is not the front dialog / window!
I agree. Yet, its consistent when I place the mouse cursor there.
Default button in File Browser does not always listen to the Return / Enter keyto Default button in File Browser does not always listen to the Return / Enter key (regression)Added subscriber: @lichtwerk
Upped the priority since it is a regression
Added subscriber: @jeric_synergy
Caused by
4ba9d7d71e
Weird, but apparently done on purpose. By you, @JulianEisel :)
Since this apparently above commit was just meant to just prevent double-clicks interfering here, will post a fix to restricts this to double-clicks only...
This issue was referenced by
6c8c30d865
Changed status from 'Confirmed' to: 'Resolved'
Added subscriber: @dupoxy
@JulianEisel If I could, I would vote for the fix to be in 2.93.
+1
Added subscriber: @ideasman42
@JulianEisel +1
I don't think the fix is safe enough to be backported to 2.93. It shouldn't but might break custom keymaps. At the very least there will be a warning printed for custom keymaps I think, because an operator property was removed.
There is however a smaller, rather hacky fix that we can do just for 2.93 that should be safe. I'll have to do that separately.
@JulianEisel Why not just remove the active region for this action completely? When the File Browser is active it is already at the top of all other Blender windows and can safely "listen" to a user pressing the Enter or Return keys...
Added subscriber: @Petri
Thanks @rjg to pointing me to here. It is strange that hovering mouse of the button do the trick :)
But what is the difference between Enter vs. Esc? As Esc is working, no matter where the mouse is.
@Petri The problem has been fixed for Blender 3.0, but the patch will not be backported to 2.93.x.
That is great news ! Thanks!